<resources>
    <string name="app_name">Ruhe</string>

    <string name="btn_inicio">Iniciar Sesión</string>
    <string name="btn_registro">Registrarse</string>
    <string name="btn_prueba">Probar</string>

    <string name="bienvenida">Bienvenid@</string>
    <string name="btn_escoger">Escoger ruta</string>
    <string name="btn_agregar">Agregar ruta</string>
    <string name="btn_cerrar">Cerrar sesión</string>

    <string name="hint_correo">Ingrese su correo</string>
    <string name="hint_contrasena">Ingrese su contraseña</string>
    <string name="hint_contrasena2">Confirme su contraseña</string>
    <string name="btn_IniciarSesion">Iniciar Sesión</string>
    <string name="btn_Registro">Registrarse</string>

    <string name="destino">Dirección del destino</string>
    <string name="hint_direccion">Dirección</string>
    <string name="hint_nombre">Nombre</string>
    <string name="ruta">Nombre ruta</string>
    <string name="contacto">Correo de su contacto</string>
    <string name="hint_contacto">Correo</string>
    <string name="tiempo">Tiempo entre preguntas</string>
    <string name="hint_tiempo">Tiempo (seg) </string>
    <string name="pregunta">Pregunta personalizada</string>
    <string name="hint_pregunta">Pregunta</string>

    <string name="btn_emergencia">EMERGENCIA</string>


</resources>
