<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarRuta">

    <LinearLayout
        android:id="@+id/LinhearLayout_fondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_gradient2"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            map:cameraZoom="15"
            map:uiRotateGestures="true"
            map:uiZoomControls="true" />

        <TableLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ruta"
                    android:textColor="#AFA9A9" />

                <EditText
                    android:id="@+id/txt_Nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/hint_nombre"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/destino"
                    android:textColor="#AFA9A9" />

                <EditText
                    android:id="@+id/txt_Direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/hint_direccion"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacto"
                    android:textColor="#AFA9A9" />

                <EditText
                    android:id="@+id/Telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/hint_contacto"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_tiempo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tiempo"
                    android:textColor="#AFA9A9" />

                <EditText
                    android:id="@+id/txt_Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/hint_tiempo"
                    android:inputType="time" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow_pregunta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta"
                    android:textColor="#AFA9A9" />

                <EditText
                    android:id="@+id/txt_pregunta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/pregunta"
                    android:inputType="text" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btn_agregarRuta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="agregarRuta"
            android:text="@string/btn_agregar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>