<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLeyout_fondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_gradient"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@drawable/ruhe_logo" />

        <Button
            android:id="@+id/iniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:insetLeft="50dp"
            android:insetRight="50dp"
            android:onClick="irIniciar"
            android:text="@string/btn_inicio"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registrarse"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:insetLeft="50dp"
            android:insetRight="50dp"
            android:onClick="irRegistro"
            android:text="@string/btn_registro"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/prueba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="irPruebaConAlertaConConfirmacion"
            android:text="@string/btn_prueba" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>